samples/_failures_safe/1761665489_b90527_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42a7cbac.c: In function ‘main’:
./samples/SAFE/__tmp_42a7cbac.c:152:9: error: expected expression at end of input
  152 |         if (
      |         ^~
./samples/SAFE/__tmp_42a7cbac.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42a7cbac.c:152:9: error: expected declaration or statement at end of input
